helm/backstage/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bstage-db
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bstage-db
  template:
    metadata:
      labels:
        app: bstage-db
    spec:
      containers:
        - name: postgresql
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: bstage-db
  namespace: backstage
spec:
  selector:
    app: bstage-db
  ports:
    - port: 5432
      targetPort: 5432
